--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <script src="https://kit.fontawesome.com/c8ecf5c66f.js"></script>
+    <title>Fireit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
